WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
211286
[GTK4] Re-inject key press events not handled by the web process
https://bugs.webkit.org/show_bug.cgi?id=211286
Summary
[GTK4] Re-inject key press events not handled by the web process
Carlos Garcia Campos
Reported
2020-05-01 06:22:27 PDT
So that they can be handled by parent widgets.
Attachments
Patch
(6.02 KB, patch)
2020-05-01 06:26 PDT
,
Carlos Garcia Campos
aperez
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2020-05-01 06:26:22 PDT
Created
attachment 398177
[details]
Patch
EWS Watchlist
Comment 2
2020-05-01 06:27:23 PDT
Thanks for the patch. If this patch contains new public API please make sure it follows the guidelines for new WebKit2 GTK+ API. See
http://trac.webkit.org/wiki/WebKitGTK/AddingNewWebKit2API
Carlos Garcia Campos
Comment 3
2020-05-02 05:56:04 PDT
Committed
r261048
: <
https://trac.webkit.org/changeset/261048
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug